Add PhotonKit and basic template

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Newsroom</title>
+    <link rel="stylesheet" href="css/photon.min.css">
     <script>delete window.module</script>
     <script type="text/javascript" src="elm.js"></script>
   </head>
