Add pressroom to flags and API call

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <script type="text/javascript">
-      Elm.Main.fullscreen({ key: process.env.MND_KEY });
+      Elm.Main.fullscreen({ key: process.env.MND_KEY, pressroom: 'se' });
     </script>
   </body>
 </html>
