Break out style into CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Newsroom</title>
     <link rel="stylesheet" href="css/photon.min.css">
+    <link rel="stylesheet" href="css/main.css">
     <script>delete window.module</script>
     <script type="text/javascript" src="elm.js"></script>
   </head>
